# ml-backend-async

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs
protos/: prediction.proto
python-grpc-server/: build_protos.sh  locustfile.py  main.py  poll_responses.py  prediction_pb2.py  prediction_pb2_grpc.py  requirements.txt  spawn_requests.py
src/: main.rs
src/backend/: mod.rs  process.rs  schema.rs
