[package]
name = "ml-backend-async"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.15"
tokio = { version = "1", features = ["full", "time"] }
uuid = { version = "1.3.1", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
tokio-stream = "0.1.12"
